rectif description/html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="agence la panthere, agence web design Lyon,site internet design, design site web, web designer">
+    <meta name="description" content="L'agence la panthere, nous sommes une équipe de web designers sur Lyon  et nous vous aideront à déveloper afin d'aller ensemble vers le succés en créant votre site internet de A à Z ou pour redonner un coup de boost à votre site web en mettant notre savoir faire à votre disposition. Notre agence web design de Lyon vous attend.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
