--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<script defer src="./js/blocs.min.js"></script>
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
-    <title>Contacter notre agence de web design à Lyon</title>
+    <title>Contactez notre agence de web design à Lyon</title>
 
     
 <!-- Analytics -->
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web design la panthere" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
