--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo panthère" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="logo panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
