--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web design la panthère" height="40" /></a>
+					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web design la panthère" height="40" /></div>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
