--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" name="twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
