--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="vous souhaiter, parler graphisme, web disgn ou tout simplement faire évoluer votre identité visuel contactez l'agence la panthère ou venez nous recontrer dans notre local situé dans Lyon.">
