--- a/contact.html
+++ b/contact.html
@@ -124,28 +124,28 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<p class="text-center ">
 						Agence La Panthère - Agence web basée à Lyon.<br>
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md">Twitter</span></a>
+								<a href="https://twitter.com/" class="fa fa-twitter icon-md social"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+								<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<a href="index.html" class="fa fa-dribbble icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+								<a href="https://www.instagram.com/" class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
