test nom de lien

--- a/index.html
+++ b/index.html
@@ -226,22 +226,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://twitter.com/" class="fa fa-twitter icon-md social"></a>
+								<a href="https://twitter.com/" name="twitter" class="fa fa-twitter icon-md social"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://fr-fr.facebook.com/" class="fa fa-facebook icon-md"></a>
+								<a href="https://fr-fr.facebook.com/" name="facebook" class="fa fa-facebook icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="index.html" class="fa fa-dribbble icon-md"></a>
+								<a href="index.html" name="dribbble" class="fa fa-dribbble icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://www.instagram.com/" class="fa fa-instagram icon-md"></a>
+								<a href="https://www.instagram.com/" name="instagram" class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
