--- a/index.html
+++ b/index.html
@@ -226,22 +226,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://twitter.com/" title="twitter" class="fa fa-twitter icon-md social">Twitter</a>
+								<a href="https://twitter.com/" aria-label="twitter" class="fa fa-twitter icon-md social"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://fr-fr.facebook.com/" title="facebook" class="fa fa-facebook icon-md">Facebook</a>
+								<a href="https://fr-fr.facebook.com/" aria-label="facebook" class="fa fa-facebook icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="index.html" title="dribbble" class="fa fa-dribbble icon-md"></a>
+								<a href="index.html" aria-label="dribbble" class="fa fa-dribbble icon-md"></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a href="https://www.instagram.com/" title="instagram" class="fa fa-instagram icon-md">Instagram</a>
+								<a href="https://www.instagram.com/" aria-label="instagram" class="fa fa-instagram icon-md"></a>
 							</div>
 						</div>
 					</div>
