--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					</h2>
 					<p class="text-center white">
 						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-						<a class="ltc-white bold-link" href="#bloc-4-portofolio">Nos réalisations</a><br>
+						<a class="ltc-white bold-link" href="#bloc-4-portfolio">Nos réalisations</a><br>
 					</p>
 				</div>
 			</div>
