hover nos realisation centrer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script defer src="./js/jquery.touchSwipe.js"></script>
 	<script defer src="./js/gmaps.js"></script>
 
-    <title>Agence La Panthère de web design</title>
+    <title>Agence La Panthère de web design à Lyon</title>
 
     
 <!-- Analytics -->
