supp double lien vers contact/ vers nos réseaux

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						Agence La Panthère
 					</h1>
 					<div class="text-center">
-						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+						<a href="#bloc-8" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Nos réseaux</a>
 					</div>
 				</div>
 			</div>
@@ -266,7 +266,6 @@
 </footer>
 <!-- Footer - bloc-8 END -->
 
-</div>
 <!-- Principal conteneur END -->
     
 
