--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
 		<div class="container bloc-lg">
 			<div class="row">
 				<div class="col-sm-12">
-					<h1 class="text-center hero-bloc-text tc-white">
+					<h1 class="text-center hero-bloc-text tc-white-contact">
 						Parlons web design !
 					</h1>
-					<p class="text-center mg-lg tc-white tight-width-whitespace">
+					<p class="text-center mg-lg tc-white-contact tight-width-whitespace">
 						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 					</p>
@@ -159,8 +159,6 @@
 	</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
-</div>
 <!-- Principal conteneur END -->
     
 
