--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web design la panthère" height="40" /></a>
+					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web design la panthère" height="40" /></div>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -78,43 +78,42 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section>
-	<div class="bloc bgc-white l-bloc" id="bloc-7">
-		<div class="container bloc-lg">
-			<div class="row">
-				<div class="col-sm-6">
-					<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-						<div class="form-group">
-							<label for="name">Nom:</label>
-								<input type="text" id="name" class="form-control" required />
-						</div>
-						<div class="form-group">
-							<label for="email">Adresse mail:</label>
-							<input id="email" class="form-control" type="email" required />
-						</div>
-						<div class="form-group">
-							<label for="questions">Comment nous avez-vous connu ?</label>
-							<input id="questions" class="form-control" required id="input_504" />
-						</div>
-						<div class="form-group">
-							<label for="message">
-								Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-							</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-						</div> 
-						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-							Envoyer
-						</button>
-					</form>
-				</div>
-				<div class="col-sm-6">
-					<p>
-						contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-					</p>
-				</div>
+
+<div class="bloc bgc-white l-bloc" id="bloc-7">
+	<div class="container bloc-lg">
+		<div class="row">
+			<div class="col-sm-6">
+				<form id="form_1" novalidate>
+					<div class="form-group">
+						<label for="name">Nom:</label>
+							<input type="text" id="name" class="form-control" required />
+					</div>
+					<div class="form-group">
+						<label for="email">Adresse mail:</label>
+						<input id="email" class="form-control" type="email" required />
+					</div>
+					<div class="form-group">
+						<label for="questions">Comment nous avez-vous connu ?</label>
+						<input id="questions" class="form-control" />
+					</div>
+					<div class="form-group">
+						<label for="message">
+							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+					</div> 
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+						Envoyer
+					</button>
+				</form>
+			</div>
+			<div class="col-sm-6">
+				<p>
+					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+				</p>
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
@@ -159,6 +158,7 @@
 	</div>
 </footer>
 <!-- Footer - bloc-8 END -->
+</div>
 <!-- Principal conteneur END -->
     
 
